--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:watch": "tsc --build tsconfig.json --watch",
     "test": "jest --verbose",
     "test:watch": "npm t -- --watchAll",
-    "test:coverage": "npm t -- --coverage"
+    "test:coverage": "npm t -- --coverage",
+    "test:watchCoverage": "npm t -- --watchAll --coverage"
   },
   "repository": {
     "type": "git",
